...
            android:contentDescription="@string/avatar"
            android:src="@drawable/account">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUserId"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        app:cardElevation="6dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_marginStart="160dp"
            android:layout_marginTop="47dp"
            android:text="@string/_01234567890123456789"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="350dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:adjustViewBounds="true"
...
